#
# automake template for scripts/ directory
#
# $Id: Makefile.am 2 2003-08-13 19:26:11Z sorokine $
#

bin_SCRIPTS = hephaestus_pilehelper hephaestus_regionhelper r.gmfg.hephaestus s.in.hephaestus \
	hephaestus_gui.py hephaestus-reset.sh

EXTRA_DIST = hephaestus_pilehelper hephaestus_regionhelper r.gmfg.hephaestus s.in.hephaestus \
	hephaestus_gui.py hephaestus-reset.sh
